# Philosophers

./: CMakeLists.txt  main.c
ft_vector/: ft_vector.c  ft_vector.h  ft_vector_2.c  ft_vector_3.c  ft_vector_4.c
include/: loop_data.h  philo_stats.h  philos_loops.h  start_settings.h  utils.h
philo/: Makefile  main.c
philo/include/: loop_data.h  main_loop.h  philo.h  philo_stats.h  philos_loops.h  start_settings.h  supervisor.h  utils.h
philo/srcs/: args_validator.c  fed_managment.c  forks_managment.c  loop_data.c  main_loop.c  philo_actions.c  philos_loops.c  supervisor.c  thread_safe_print.c  time_utils.c
philo/utils/: ft_atoi.c  ft_memcpy.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_strlen.c
srcs/: loop_data.c  main_loop.c  philo_actions.c  philos_loops.c  thread_safe_print.c  time_utils.c
utils/: ft_bzero.c  ft_isspace.c  ft_itoa.c  ft_memmove.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strdup.c  ft_strlcpy.c  ft_ternary.c
